--- a/app/src/main/res/values-en/string.xml
+++ b/app/src/main/res/values-en/string.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">Navigation</string>
     <!--title-->
     <string name="version">Version</string>
     <string name="feedback">Feedback</string>
@@ -11,5 +12,5 @@
     <string name="left">Left</string>
     <string name="right">Right</string>
     <string name="send_email">Send Email</string>
-    <string name="jump">Jump</string>
+    <string name="jump">Click Jump</string>
 </resources>
