--- a/app/src/main/res/values-en/string.xml
+++ b/app/src/main/res/values-en/string.xml
@@ -1,16 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Navigation</string>
+    <!--key-->
+    <string name="string_help">help</string>
+    <string name="string_open_service">open_service</string>
+    <string name="string_position_back">position_back</string>
+    <string name="string_feedback">feedback</string>
+    <string name="string_version">version</string>
+
     <!--title-->
     <string name="version">Version</string>
     <string name="feedback">Feedback</string>
     <string name="help">Help</string>
     <string name="position_back">Back Position</string>
     <string name="open_service">Open AccessibilityService</string>
+    <string name="display">Display button</string>
 
     <!--summary-->
     <string name="left">Left</string>
     <string name="right">Right</string>
     <string name="send_email">Send Email</string>
     <string name="jump">Click Jump</string>
+
+    <string name="help_content">开启辅助服务，允许悬浮窗\n
+                                加入后台保护、开机自启\n
+                                透明显示，高度为状态栏的0.8\n
+                                宽度为高度的1.6\n
+                                位置如图所示
+    </string>
 </resources>
