--- a/app/src/main/res/values-en/string.xml
+++ b/app/src/main/res/values-en/string.xml
@@ -7,6 +7,7 @@
     <string name="string_position_back">position_back</string>
     <string name="string_feedback">feedback</string>
     <string name="string_version">version</string>
+    <string name="string_source">source</string>
 
     <!--title-->
     <string name="version">Version</string>
@@ -15,6 +16,7 @@
     <string name="position_back">Back Position</string>
     <string name="open_service">Open AccessibilityService</string>
     <string name="display">Display button</string>
+    <string name="source">Source</string>
 
     <!--summary-->
     <string name="left">Left</string>
